--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/pcbuilder
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/pcbuilder}
+spring.datasource.username=${SPRING_DATASOUCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.jpa.generate-ddl=true
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
